--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 torch==2.0.0
-git+https://github.com/huggingface/transformers
+transformers==4.27.4
 sentencepiece==0.1.97
 fastapi==0.95.0
 uvicorn==0.21.1
+redis==4.5.4
+celery==5.2.7
+hupper==1.12
