--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   web:
     build: .
     command: >
-      sh -c "uvicorn doris.main:app --host 0.0.0.0 --port 8000
+      sh -c "uvicorn doris.api.main:app --host 0.0.0.0 --port 8000
       $(if [ \"$AUTORELOAD\" = \"true\" ]; then echo '--reload'; fi)"
     volumes:
       - .:/app
@@ -21,11 +21,20 @@ services:
 
   worker:
     build: .
-    command: python doris/workers/run_workers.py
+    command: celery -A doris.workers.worker worker -Q tasks -n worker@%h --loglevel=info --concurrency=1
     volumes:
       - .:/app
     depends_on:
       - redis
     environment:
       - REDIS_URL=redis://redis:6379/0
-      - AUTORELOAD=false
+
+  gpu_worker:
+    build: .
+    command: celery -A doris.workers.worker_gpu worker -Q gpu_tasks -n gpu_worker@%h --loglevel=info --concurrency=1
+    volumes:
+      - .:/app
+    depends_on:
+      - redis
+    environment:
+      - REDIS_URL=redis://redis:6379/0
